--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -17,7 +17,25 @@ tail(data)
 
 ## What is mean total number of steps taken per day?
 
+Note that each day consists of approximately
 
+XXXX: Name this and reuse it.
+
+```{R}
+24 * 60 * 60
+```
+
+seconds (i.e., the total number of hours in a day, converted to
+seconds).
+
+Since samples were taken every 5 seconds, we'll assume that each
+"day" of observations consists of at most
+
+```{R}
+24 * 60 * 60 / 5
+```
+
+samples.
 
 ## What is the average daily activity pattern?
 
