average intervals across days

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -51,6 +51,13 @@ median(total_steps_per_day)
 
 ## What is the average daily activity pattern?
 
+To find the average number of steps per 5-minute interval across all days, we split the
+cleaned dataset (i.e., still ignoring NAs) across the interval numbers:
+
+```{R}
+by_interval = split(cleaned, cleaned$interval)
+averages <- sapply(by_interval, function (interval) { mean(interval$steps) })
+```
 
 
 ## Imputing missing values
