plot of steps taken vs. time of day

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -57,6 +57,11 @@ cleaned dataset (i.e., still ignoring NAs) across the interval numbers:
 ```{R}
 by_interval = split(cleaned, cleaned$interval)
 averages <- sapply(by_interval, function (interval) { mean(interval$steps) })
+plot(x = names(averages),
+     y = averages,
+     type = 'l',
+     xlab='Time of day',
+     ylab='Average steps taken')
 ```
 
 
