--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -114,9 +114,22 @@ mean(total_steps_per_day)
 median(total_steps_per_day)
 ```
 
-An interesting question to ask up front is how to deal with the issue of missing values in our data.
+These values differ from the original ones calculated (i.e., mean and median of total number of steps per day for non-NA data only) in two dramatic ways:
 
-The assignment instructs that, "For this part of the assignment, you can ignore the missing values in the dataset."  However, it's probably wise to get an initial sense of exactly how frequent these missing values were and how they are distributed throughout the dataset:  a day which consists strictly of NA values could probably be ignored entirely from our analysis, whereas a day which requires a mix of NA and non-NA values might or might not be useful for our analysis depending on the percentage of values missing.
+- Both values are higher than the originals (especially so in the case of the mean)
+- Whereas the original median exceeded the original mean by over 600 steps, the new
+  mean and median are, in fact, exactly equal out to two decimal places.
+
+Comparing the two histograms gives us some insight into why this probably happened.
+
+When we originally just summed up the total steps per day which weren't NAs, this was
+tantamount to pretending that the number of steps taken by the test subject in each of
+the NA intervals was 0.  Replacing each of these NAs with one of the (often nonzero)
+daily interval estimates, therefore, not surprisingly ended up increasing our calculated
+mean and median number of steps per day!
+
+
+
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
