Remove subplot axis labels

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -166,9 +166,13 @@ par(mfrow = c(2, 1))
 plot(
   x = unique(interpolated$interval),
   y = average_steps_by_interval(interpolated[interpolated$day_type == 'weekday',]),
-  type = 'l')
+  type = 'l',
+  xlab = NA,
+  ylab = NA)
 plot(
   x = unique(interpolated$interval),
   y = average_steps_by_interval(interpolated[interpolated$day_type == 'weekday',]),
-  type = 'l')
+  type = 'l',
+  xlab=NA,
+  ylab=NA)
 ```
