Outer dimensions which never appear

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -175,4 +175,6 @@ plot(
   type = 'l',
   xlab=NA,
   ylab=NA)
+mtext('Interval', side = 1, outer = TRUE)
+mtext('Number of steps', side = 2, outer = TRUE)
 ```
