--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -151,6 +151,9 @@ interpolated$day_type <- factor(sapply(interpolated$date, function (date) {
     'weekday'
   }
 }))
+head(interpolated)
+tail(interpolated)
+class(interpolated$day_type)
 ```
 
 
@@ -162,22 +165,6 @@ average_steps_by_interval <- function (dataset) {
   sapply(by_interval, function (interval) { mean(interval$steps) })
 }
 
-par(mfrow = c(2, 1), cex = 0.75)
-plot(
-  x = unique(interpolated$interval),
-  y = average_steps_by_interval(interpolated[interpolated$day_type == 'weekday',]),
-  main = 'weekend',
-  type = 'l',
-  xlab=NA,
-  ylab=NA)
-plot(
-  x = unique(interpolated$interval),
-  y = average_steps_by_interval(interpolated[interpolated$day_type == 'weekday',]),
-  type = 'l',
-  main ='weekday',
-  xlab = NA,
-  ylab = NA)
-
-mtext('Interval', side = 1, line = 3, cex = 1.5)
-mtext('Number of steps', side = 2, line = 2, cex = 1.5)
+# library(lattice)
+# xyplot(average_steps_by_interval(interpolated)|interpolated$day_type)
 ```
