--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -165,5 +165,6 @@ average_steps_by_interval <- function (dataset) {
 library(lattice)
 xyplot(
   average_steps_by_interval(interpolated)~unique(interpolated$interval)|interpolated$day_type,
-  type = 'l')
+  type = 'l',
+  layout = c(1, 3))
 ```
