--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -166,5 +166,7 @@ library(lattice)
 xyplot(
   average_steps_by_interval(interpolated)~unique(interpolated$interval)|interpolated$day_type,
   type = 'l',
-  layout = c(1, 3))
+  layout = c(1, 3),
+  xlab = 'Interval',
+  ylab = 'Number of steps')
 ```
