--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -153,6 +153,16 @@ interpolated$day_type <- factor(sapply(interpolated$date, function (date) {
 }))
 ```
 
+First, we separate out our weekday and weekend recordings into separate datasets:
+
+```{R}
+is_weekday <- function (date) {
+  weekdays(date) %in% c('Saturday', 'Sunday')
+}
+weekday_data = interpolated[is_weekday(interpolated$date)]
+weekend_data = interpolated[!is_weekday(interpolated$date)]
+```
+
 
 Now we can do a side-by-side time series plot of the average number of steps taken per 5-minute interval on weekdays vs. weekend days:
 
