--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -172,7 +172,23 @@ average_steps_by_interval <- function (dataset) {
 }
 
 weekdays <- average_steps_by_interval(weekday_data)
-weekend <- average_steps_by_interval(weekend_data)
+weekends <- average_steps_by_interval(weekend_data)
+```
+
+Combine these two into a data frame, identifying which are weekdays, which weekends:
+
+```{R}
+weekdays <- data.frame(
+  interval=names(weekdays),
+  steps=weekdays,
+  day_type=rep('weekday', length(weekdays)))
+weekends <- data.frame(
+  interval=names(weekends),
+  steps=weekends,
+  day_type=rep('weekend', length(weekends)))
+averages <- right_join(weekdays, weekends)
+averages <- arrange(averages, interval)
+head(averages)
 ```
 
 Now we can do a side-by-side time series plot of the average number of steps taken per 5-minute interval on weekdays vs. weekend days:
