Finally got the thing to plot side-by-side!

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -188,6 +188,7 @@ weekends <- data.frame(
   day_type=rep('weekend', length(weekends)))
 
 averages <- rbind(weekdays, weekends)
+averages$day_type <-factor(averages$day_type, levels=c('weekday', 'weekend'))
 averages <- arrange(averages, interval)
 head(averages)
 ```
@@ -197,7 +198,7 @@ Now we can do a side-by-side time series plot of the average number of steps tak
 ```{R}
 library(lattice)
 xyplot(
-  ~weekdays,
+  averages$steps ~ averages$interval | averages$day_type,
   type = 'l',
   layout = c(1, 2))
 
